--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -144,10 +144,10 @@
                 </div>
             </div>
             <div class="col-4 d-flex flex-column justify-content-center align-items-center">
-                <p th:if="${jugador1 != null}"
-                   th:text="|${jugador1.nombre}: ${puntosJ1 != null ? puntosJ1 : 0}|"></p>
-                <p th:if="${jugador2 != null}"
-                   th:text="|${jugador2.nombre}: ${puntosJ2 != null ? puntosJ2 : 0}|"></p>
+                <p th:if="${puntosJ1 != null}"
+                   th:text="${jugador1.nombre + ' ' + puntosJ1}"></p>
+                <p th:if="${puntosJ2 != null}"
+                   th:text="${jugador2.nombre + ' ' + puntosJ2}"></p>
                 <p th:if="${turnoJugador != null}" th:text="'Turno de jugador ' + ${turnoJugador}"></p>
                 <a th:if="${seTermino}"
                    class="btn btn-danger"
@@ -300,50 +300,6 @@
     <p th:if="${jugador1 != null}" th:text="${jugador1}"></p>
     <p th:if="${jugador2 != null}" th:text="${jugador2}"></p>
     <p th:if="${partida != null}" th:text="${partida}"></p>
-<!--    <p th:if="${mano != null}" th:text="${mano}"></p>-->
-    <p th:if="${ronda != null}" th:text="${ronda}"></p>
-
-    <!--    <div class="tabla-datos">-->
-    <!--        <table class="table table-striped table-bordered">-->
-    <!--            <thead class="thead-dark">-->
-    <!--            <tr>-->
-    <!--                <th>ID CARTA</th>-->
-    <!--                <th>VALOR</th>-->
-    <!--                <th>NÚMERO</th>-->
-    <!--                <th>PALO</th>-->
-    <!--                <th>VALOR ENVIDO</th>-->
-    <!--            </tr>-->
-    <!--            </thead>-->
-    <!--            <tbody>-->
-    <!--            <tr th:each="carta : ${todasLasCartas}">-->
-    <!--                <td th:text="${carta.id}"></td>-->
-    <!--                <td th:text="${carta.valor}"></td>-->
-    <!--                <td th:text="${carta.numero}"></td>-->
-    <!--                <td th:text="${carta.palo}"></td>-->
-    <!--                <td th:text="${carta.valorEnvido}"></td>-->
-    <!--            </tr>-->
-    <!--            </tbody>-->
-    <!--        </table>-->
-    <!--    </div>-->
-    <!--    <div class="tabla-datos">-->
-    <!--        <table class="table table-striped table-bordered">-->
-    <!--            <thead class="thead-dark">-->
-    <!--            <tr>-->
-    <!--                <th>EJECUTOR</th>-->
-    <!--                <th>ACCION</th>-->
-    <!--                <th>RESPUESTA</th>-->
-    <!--            </tr>-->
-    <!--            </thead>-->
-    <!--            <tbody>-->
-    <!--            <tr th:each="a : ${acciones}">-->
-    <!--                <td th:text="${a.jugadorQueEjecuta.nombre}"></td>-->
-    <!--                <td th:text="${a.accion}"></td>-->
-    <!--                <td th:text="${a.respuesta}"></td>-->
-    <!--            </tr>-->
-    <!--            </tbody>-->
-    <!--        </table>-->
-    <!--    </div>-->
-
 
 </main>
 
