SalaDeEspera y jugar con 2 usuarios v1

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -53,7 +53,7 @@
     <div class="container-juegos">
 
         <div class="truco-container">
-            <a th:href="@{/MenuJuego}">
+            <a th:href="@{/menuJuego}">
                 <img th:src="@{/img/truco-home.png}" alt="Imagen del juego truco">
                 <div class="texto-truco">TRUCO</div>
             </a>
