--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -25,7 +25,7 @@
 
 <main>
     <h3 th:text="${jugador2 != null && jugador1 != null
-    ? 'Jugando ' + jugador1.nombre + ' VS ' + jugador2.nombre : 'Error. Falta un jugador.'}">
+    ? 'Jugando ' + jugador1.nombre + ' VS ' + jugador2.nombre : 'Un momento. Falta un jugador.'}">
     </h3>
     <div id="mesa" class="gap-2">
 
